# gazebo_spaceship

./: CMakeLists.txt  README.md  package.xml
launch/: description.launch  gazebo.launch
meshes/: tie_fighter.stl
urdf/: spaceship.urdf.xacro  thruster.urdf.xacro
