<?xml version="1.0"?>
<package format="2">
  <name>gazebo_spaceship</name>
  <version>0.0.1</version>
  <description>The gazebo_spaceship package</description>

  <maintainer email="stavrinosgeo@gmail.com">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>uuv_gazebo_plugins</depend>

</package>
